# Drawgon

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  GenerateProject.bat  README.md  premake5.lua
Tigraf-ConsoleApp/: Tigraf-ConsoleApp.vcxproj  Tigraf-ConsoleApp.vcxproj.filters  cpp.hint  premake5.lua
Tigraf-ConsoleApp/resources/shaders/: ComputeShader.glsl  CubemapShader.glsl  FramebufferShader.glsl  GUI_Shader.glsl  GridShader.glsl  PrimitiveShader.glsl  basic.glsl  cubemap.glsl  floor.glsl  framebuffer.glsl
Tigraf-ConsoleApp/src/: Tigraf-ConsoleApp.cpp
Tigraf-ConsoleApp/src/Layers/: AppLayer.cpp  AppLayer.h
Tigraf-Engine/: Tigraf-Engine.vcxproj  Tigraf-Engine.vcxproj.filters  cpp.hint  premake5.lua
Tigraf-Engine/src/: PCH.h  Tigraf.h
Tigraf-Engine/src/Tigraf/Core/: Application.cpp  Application.h  Assert.h  Core.h  EntryPoint.h  Layer.h  Log.cpp  Log.h  PlatformDetection.h  Timer.h
Tigraf-Engine/src/Tigraf/Event/: Event.h
Tigraf-Engine/src/Tigraf/GUI/: Frame.cpp  Frame.h  GUI_Element.cpp  GUI_Element.h
Tigraf-Engine/src/Tigraf/Input/: Input.h  Keycodes.h  glfwInput.h
Tigraf-Engine/src/Tigraf/Renderer/: GraphicsContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  Renderer.cpp  Renderer.h  RendererAPI.h
Tigraf-Engine/src/Tigraf/Renderer/Buffers/: Buffer.cpp  Buffer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  RWBufferDefines.h  UniformBufferDefines.h
Tigraf-Engine/src/Tigraf/Renderer/Camera/: Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h
Tigraf-Engine/src/Tigraf/Renderer/Framebuffers/: Framebuffer.cpp  Framebuffer.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h
Tigraf-Engine/src/Tigraf/Renderer/Mesh/: Mesh.cpp  Mesh.h  MeshPrimitives.cpp  MeshPrimitives.h
Tigraf-Engine/src/Tigraf/Renderer/Shaders/: ComputeShader.cpp  ComputeShader.h  Shader.cpp  Shader.h  glslComputeShader.cpp  glslComputeShader.h  glslShader.cpp  glslShader.h
Tigraf-Engine/src/Tigraf/Renderer/Textures/: OpenGLTexture.cpp  OpenGLTexture.h  Texture.cpp  Texture.h
Tigraf-Engine/src/Tigraf/Window/: Window.cpp  Window.h  glfwWindow.cpp  glfwWindow.h
Tigraf-GUI/: Tigraf-GUI.vcxproj  premake5.lua
cmake/: Drawgon_Utils.cmake
resources/: imgui.ini
resources/settings/: default.ini
resources/shaders/: CubemapShader.glsl  GridShader.glsl  PrimitiveShader.glsl
scripts/: win_generate_project.bat
src/Drawgon/: Drawgon-ConsoleApp.cpp  Scene.cpp  Scene.h  SceneData.h  Tigraf-ConsoleApp.cpp
src/Drawgon/Browser/: FileBrowser.cpp  FileBrowser.h
src/Drawgon/Console/: Console.cpp  Console.h  drawgon_console_sink.h
src/Drawgon/Entity/: Entity.h
src/Drawgon/GUI/: GUI.h  GUI_DrawgonDefines.h  GUI_GeneralDefines.h  GUI_LayerDefines.h
src/Drawgon/Layers/: AppLayer.cpp  AppLayer.h  DrawgonLayer.cpp  DrawgonLayer.h  Settings.h
src/Drawgon/Project/: Project.cpp  Project.h  Settings.h
src/Drawgon/Scene/: Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneData.h  SceneDefines.h
